GeneUtils: don't assume mutability of Collectors.toList()